tests/ui/fail/no_same_field_and_related.stderr
error: error returned from database: (code: 1) no such table: bla
 --> tests/ui/fail/no_same_field_and_related.rs:1:10
  |
1 | #[derive(sqlo::Sqlo)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::sqlx_macros::expand_query` which comes from the expansion of the derive macro `sqlo::Sqlo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: error returned from database: (code: 1) no such table: bla
 --> tests/ui/fail/no_same_field_and_related.rs:1:10
  |
1 | #[derive(sqlo::Sqlo)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::sqlx_macros::expand_query` which comes from the expansion of the derive macro `sqlo::Sqlo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: error returned from database: (code: 1) no such table: bla
 --> tests/ui/fail/no_same_field_and_related.rs:1:10
  |
1 | #[derive(sqlo::Sqlo)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::sqlx_macros::expand_query` which comes from the expansion of the derive macro `sqlo::Sqlo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: error returned from database: (code: 1) no such table: bla
 --> tests/ui/fail/no_same_field_and_related.rs:1:10
  |
1 | #[derive(sqlo::Sqlo)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::sqlx_macros::expand_query` which comes from the expansion of the derive macro `sqlo::Sqlo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: related name must be different from all targeted sqlos's fields
  --> tests/ui/fail/no_same_field_and_related.rs:10:34
   |
10 |     #[sqlo(fk = "Bla", related = "un")]
   |                                  ^^^^
